got my notes to align correctly in my favorites finally.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -98,6 +98,14 @@ body {
 
 }
 
+h3 {
+    margin-bottom: 4rem;
+}
+
+.notes {
+
+   float: right;
+ }
 
 /* Extra markup and styles for table-esque vertical and horizontal centering */
 // .site-wrapper {
